[metadata]
name = python-neutronclient
summary = CLI and Client Library for OpenStack Networking
description-file =
    README.rst
author = OpenStack Networking Project
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    neutronclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron = neutronclient.shell:main

neutronclient.extension =
    extlink = neutronclient.neutron.v2_0.extnetwork.extlink
    extnode = neutronclient.neutron.v2_0.extnetwork.extnode
    extinterface = neutronclient.neutron.v2_0.extnetwork.extinterface
    extsegment = neutronclient.neutron.v2_0.extnetwork.extsegment

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutronclient/locale/neutronclient.pot

[compile_catalog]
directory = neutronclient/locale
domain = neutronclient

[update_catalog]
domain = neutronclient
output_dir = neutronclient/locale
input_file = neutronclient/locale/neutronclient.pot
